--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    // 追加した
+    // retrofit
     compile 'io.reactivex:rxandroid:1.2.1'
     def retrofitVersion = '2.0.2'
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    // Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    // RxLifecycle
+    def rxlifecycleVersion = '0.6.1'
+    compile "com.trello:rxlifecycle-kotlin:$rxlifecycleVersion"
+    compile "com.trello:rxlifecycle-components:$rxlifecycleVersion"
 }
